# ising

./: .gitignore  CMakeLists.txt  profile.sh  readme.md  requirements.txt  run_inference_pipeline.sh  to-do_inference.txt
analyses/n100b0eq_test/: metadata.yaml
analyses/n100b0neq_test/: metadata.yaml
analyses/n100b0rec_test/: metadata.yaml
analyses/n100b0recording_analysis/: metadata.yaml
analyses/n150b0mean_field_test/: metadata.yaml
analyses/n150b0rec_test/: metadata.yaml
analyses/n200b0neq_test/: metadata.yaml
analyses/n200b0neq_test_divided/: metadata.yaml
analyses/n200b0rec_test/: metadata.yaml
analyses/n20b0rec_test/: metadata.yaml
analyses/n270b0recording_analysis/: metadata.yaml
analyses/n30b0rec_test/: metadata.yaml
analyses/n40b0eq_test_divided/: metadata.yaml
analyses/n50b0eq_test/: metadata.yaml
analyses/n50b0rec_test/: metadata.yaml
analyses/n50b0recording_analysis/: metadata.yaml
analyses/n60b0eq_test/: metadata.yaml
analyses/n70b0eq_test/: metadata.yaml
analyses/n70b0neq_test/: metadata.yaml
analyses/n75b0eq_test/: metadata.yaml
build-debug/: ising_debug
data/params/: params_Angie_10.npy  params_Angie_100.npy  params_Angie_110.npy  params_Angie_120.npy  params_Angie_130.npy  params_Angie_140.npy  params_Angie_150.npy  params_Angie_160.npy  params_Angie_170.npy  params_Angie_180.npy  params_Angie_190.npy  params_Angie_20.npy  params_Angie_200.npy  params_Angie_210.npy  params_Angie_220.npy  params_Angie_230.npy  params_Angie_240.npy  params_Angie_250.npy  params_Angie_260.npy  params_Angie_270.npy  params_Angie_30.npy  params_Angie_40.npy  params_Angie_50.npy  params_Angie_60.npy  params_Angie_70.npy  params_Angie_80.npy  params_Angie_90.npy
include/: exact_infer.h  grad_ascent.h  inverse.h  models.h  observables.h  random_mt.h  sample.h  timer.h  utils.h
python/: ising_test.py  test_models.py  test_obs_calcs.py
python/src/: .flake8  grad_asc_testing copy.ipynb  grad_asc_testing.ipynb  inference_pipeline.py  isingfitter.py  isingfitter_test.ipynb  misc_plotting.py  model_eval.py  model_eval_test.ipynb  model_eval_test.py  multi_run.py  plot_3rd_order_corrs.py  preprocessing.py  sampler_analytic.py  single_run.py  (+2 more)
src/: exact_infer.cpp  grad_ascent.cpp  inverse.cpp  models.cpp  observables.cpp  pybindings.cpp  sample.cpp  utils.cpp
testing/: ising_debug.cpp
(+106 files in other folders)
